[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "human-sovereignty-core"
version = "0.1.0"
description = "Human Sovereignty Core: policy-driven safety, approvals, escalation, TTL, veto, and trust anchors."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Aethernova Team" }
]
keywords = [
  "policy",
  "security",
  "governance",
  "sovereignty",
  "zero-trust",
  "approval",
  "escalation",
  "ttl",
  "veto"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed"
]

dependencies = [
  "pydantic>=2.7.0,<3",
  "pydantic-settings>=2.3.0,<3",
  "PyYAML>=6.0.1",
  "jsonschema>=4.22.0",
  "cryptography>=42.0.0",
  "httpx>=0.27.0",
  "structlog>=24.1.0",
  "rich>=13.7.0",
  "typing-extensions>=4.10.0; python_version < '3.13'"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.6",
  "pytest-cov>=5.0.0",
  "coverage[toml]>=7.5.0",
  "mypy>=1.10.0",
  "ruff>=0.5.0",
  "pre-commit>=3.7.0",
  "pip-audit>=2.7.3",
  "bandit[toml]>=1.7.8",
  "types-PyYAML>=6.0.12.20240808"
]
docs = [
  "mkdocs>=1.6.0",
  "mkdocs-material>=9.5.0"
]

[project.urls]
Repository = "https://example.invalid/aethernova/human-sovereignty-core"
Issues = "https://example.invalid/aethernova/human-sovereignty-core/issues"

[tool.hatch.build.targets.wheel]
packages = ["human_sovereignty_core"]

[tool.hatch.build]
include = [
  "human_sovereignty_core/**/*.py",
  "README.md",
  "pyproject.toml",
  "human_sovereignty_core/config/**/*.yaml"
]
exclude = [
  "**/__pycache__/**",
  "**/*.pyc",
  "**/*.pyo"
]

[tool.hatch.envs.default]
features = ["dev"]
python = "3.11"

[tool.hatch.envs.default.scripts]
lint = "ruff check ."
format = "ruff format ."
typecheck = "mypy ."
test = "pytest -q"
test-cov = "pytest --cov --cov-report=term-missing"
audit = "pip-audit"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
xfail_strict = true
filterwarnings = [
  "error",
  "ignore:.*distutils.*:DeprecationWarning"
]

[tool.coverage.run]
branch = true
parallel = true
source = ["human_sovereignty_core"]
omit = [
  "*/tests/*",
  "*/__init__.py"
]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError"
]

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true
unsafe-fixes = false
respect-gitignore = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
  "E", "F", "W",
  "I",
  "N",
  "UP",
  "B",
  "SIM",
  "C4",
  "PIE",
  "RUF",
  "S"
]
ignore = [
  "S101"
]
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106", "S108"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict = true
pretty = true
show_error_codes = true
exclude = "(^|/)(\\.venv|build|dist)/"

[tool.bandit]
skips = ["B101"]
exclude_dirs = ["tests", ".venv", "build", "dist"]

[tool.pip-audit]
require_hashes = false
progress_spinner = "off"

[tool.ruff.lint.isort]
known-first-party = ["human_sovereignty_core"]
combine-as-imports = true
