[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "aethernova-observability-core"
version = "1.1.0"
description = "Aethernova health, metrics, logging, and tracing service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<0.140",
  "prometheus-client>=0.20,<0.26",
  "pydantic-settings>=2.3,<2.15",
  "uvicorn[standard]>=0.30,<0.52",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<0.29",
  "PyYAML>=6.0,<7",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.23,<0.27",
  "ruff>=0.6,<0.16",
]
integrations = [
  "aiohttp>=3.10,<4",
  "confluent-kafka>=2.5,<3",
  "opentelemetry-api>=1.25,<2",
  "requests>=2.32,<3",
  "sentry-sdk>=2,<3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
observability_core = [
  "ecs/*.json",
  "processors/*.yaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
line-ending = "lf"
